fixed credits on mobile view

--- a/time-dashboard/styles.css
+++ b/time-dashboard/styles.css
@@ -347,6 +347,10 @@ body{
 	.previous{
 		font-size: small;
 	}
+	#credits p{
+		font-size: small;
+		text-align: center;
+	}
 
 }
 
